# ex_polars

./: .gitignore  .iex.exs  LICENSE  Makefile  README.md  learning_expolars.ipynb  mix.exs
lib/: ex_polars.ex
lib/datasets/: datasets.ex
lib/ex_polars/: dataframe.ex  inspect.ex  native.ex  plot.ex  series.ex
native/expolars/: Cargo.toml  README.md
native/expolars/src/: dataframe.rs  datatypes.rs  error.rs  lib.rs  series.rs
priv/: local_datasets.json
priv/datasets/: btc.csv
slides/: ex-polars-lessons-learned.md
test/: dataframe_test.exs  ex_polars_test.exs
test/data/: testdata.csv
