[package]
name = "expolars"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "expolars"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
polars = {git = "https://github.com/ritchie46/polars", features = ["parquet", "simd", "lazy", "strings", "temporal", "random", "object", "ipc"]}
rustler = "0.22.0-rc.0"
thiserror = "1"
ndarray = "0.14"
parquet = "2"
