[package]
name = "expolars"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "expolars"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.22.0-rc.0"
polars = {git = "https://github.com/ritchie46/polars", features = ["parquet", "json", "simd", "lazy", "strings", "temporal", "random", "object", "ipc"]}

anyhow = "1.0"
ndarray = "0.14"
parquet = "2"
serde_json = "1.0"
thiserror = "1"
arrow = "2"
