[package]
name = "expolars"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "expolars"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.22.0-rc.0"
polars = { version = "0.12.1", features = ["parquet", "json", "simd", "lazy", "strings", "temporal", "random", "object", "ipc"] }

arrow = {version="4.0.0-SNAPSHOT", git = "https://github.com/apache/arrow", rev = "f7b143959ec77a79a3e11bcb83e24eaf0d03697c", default-features=false}
parquet = {version = "4.0.0-SNAPSHOT", optional = true, git = "https://github.com/apache/arrow", rev = "f7b143959ec77a79a3e11bcb83e24eaf0d03697c"}
anyhow = "1.0"
ndarray = "0.14"
serde_json = "1.0"
thiserror = "1"
